# codegraph-gov

./: .env.example  .gitignore  LICENSE  NOTICE  README.en.md  README.md  projects.example.json  pyproject.toml  requirements.txt
cg_gov/: canonical.py  cli.py  config.py  db.py  docgen.py  docs_hint.py  embed.py  extract.py  fts.py  fuse.py  graph.py  index.py  mcp_server.py  projects.py  query_expand.py  reuse.py  scan.py  search.py
cg_gov/perception/: __init__.py  config.py  gitea.py  parser.py  poll.py  state.py
tests/: test_canonical.py  test_fts.py  test_fuse.py  test_gitea.py  test_parser.py  test_query_expand.py  test_reuse_expansion.py  test_search.py
